@startuml
skinparam classAttributeIconSize 0


title __Bank Application Class Diagram__\n

abstract class BankAccount {
    - accHolder: Person
    # balance : double
    - accNum : int
    + BankAccount()
    + BankAccount(accHolder: Person,
    accNum: int, balance: double)
    + toString() : String
    {abstract} + describeAccount() : String
 }

 class CurrentAccount {
    - TYPE : String
    + CurrentAccount(accHolder: Person,
    accNum: int, balance: double)
    + describeAccount() : String
 }

 class Person {
    - address : String
    - name : String
    + Person(name: String, address: String)
    + Person()
    + toString() : String
 }

 class SavingsAccount {
    - TYPE : String
    + SavingsAccount(accHolder: Person,
    accNum: int, balance: double)
    + describeAccount(): String
 }

class InterestRate {
   + calculateInterestRate(BankAccount bankAccount): double
}

  BankAccount -right-o Person : has a
  InterestRate -right-o BankAccount : has an
  CurrentAccount -up-|> BankAccount
  SavingsAccount -up-|> BankAccount

@enduml
